# blochsim

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  setup.py
blochsim/: __init__.py  blochsim.py  plot.py  routines.py  sim.py  trapezoid.py  utils.py
conda.recipe/: meta.yaml
docs/: blochsim.rst  conf.py  index.rst  modules.rst
